crates/rome_formatter/tests/specs/prettier/tuple/destructuring.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: destructuring.js

---
# Input
```js
const [a, b] = #[1, 2];
assert(a === 1);
assert(b === 2);

const [a, ...rest] = #[1, 2, 3];
assert(a === 1);
assert(Array.isArray(rest));
assert(rest[0] === 2);
assert(rest[1] === 3);

```

# Output
```js
const [a, b] = #
[1, 2];
assert(a === 1);
assert(b === 2);



const [a, ...rest] = #
[1, 2, 3];
assert(a === 1);
assert(Array.isArray(rest));
assert(rest[0] === 2);
assert(rest[1] === 3);

```

# Errors
```
error[SyntaxError]: expected `IDENT` but instead found `[`
  ┌─ destructuring.js:1:17
  │
1 │ const [a, b] = #[1, 2];
  │                 ^ unexpected

error[SyntaxError]: expected `IDENT` but instead found `[`
  ┌─ destructuring.js:5:23
  │
5 │ const [a, ...rest] = #[1, 2, 3];
  │                       ^ unexpected


```


